- Move GPXTools to a package