@@ -5,6 +5,7 @@ import com.gpxmanager.gpx.beans.Waypoint;
 import java.util.Date;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 public class MyTime {
 
@@ -48,7 +49,7 @@ public class MyTime {
                 .map(Waypoint::getTime)
                 .filter(Objects::nonNull)
                 .sorted()
-                .toList();
+                .collect(Collectors.toList());
         if (times.size() < 2) {
             return null;
         }
